pt.hive.colony.language.settler/src/colony/language/parser.out


Unused terminals:


Grammar

Rule 1     program -> statements
Rule 2     statements -> statement NEWLINE statements
Rule 3     statements -> statement NEWLINE
Rule 4     statement -> PASS
Rule 5     statement -> name_reference EQUALS expression
Rule 6     statement -> IF expression COLON NEWLINE statements else_condition END
Rule 7     else_condition -> ELSE COLON NEWLINE statements else_condition
Rule 8     else_condition -> ELIF expression COLON NEWLINE statements else_condition
Rule 9     else_condition -> <empty>
Rule 10    statement -> WHILE expression COLON NEWLINE statements END
Rule 11    statement -> FOR NAME IN expression COLON NEWLINE statements END
Rule 12    statement -> RETURN expression
Rule 13    statement -> GLOBAL NAME
Rule 14    statement -> expression
Rule 15    statement -> import
Rule 16    statement -> function
Rule 17    statement -> class
Rule 18    statement -> interface
Rule 19    statement -> plugin
Rule 20    statement -> capability
Rule 21    expression -> expression PLUS expression
Rule 22    expression -> expression MINUS expression
Rule 23    expression -> expression TIMES expression
Rule 24    expression -> expression DIVIDE expression
Rule 25    expression -> expression POWER expression
Rule 26    expression -> expression EQUALEQUAL expression
Rule 27    expression -> expression GREATER expression
Rule 28    expression -> expression GREATEREQUAL expression
Rule 29    expression -> expression LESS expression
Rule 30    expression -> expression LESSEQUAL expression
Rule 31    expression -> expression AND expression
Rule 32    expression -> expression OR expression
Rule 33    expression -> NOT expression
Rule 34    expression -> MINUS expression
Rule 35    expression -> LPAREN expression RPAREN
Rule 36    expression -> NUMBER
Rule 37    expression -> STRING
Rule 38    expression -> BOOL
Rule 39    expression -> name_reference
Rule 40    expression -> LBRACK list_contents RBRACK
Rule 41    list_contents -> expression COMA list_contents
Rule 42    list_contents -> expression
Rule 43    list_contents -> <empty>
Rule 44    name_reference -> NAME DOT name_reference
Rule 45    name_reference -> NAME
Rule 46    import -> IMPORT name_reference COMA import
Rule 47    import -> IMPORT name_reference
Rule 48    function -> function_operators FUNCTION NAME LPAREN arguments RPAREN COLON NEWLINE statements END
Rule 49    function_operators -> function_operator COMA function_operators
Rule 50    function_operators -> function_operator
Rule 51    function_operators -> <empty>
Rule 52    function_operator -> STATIC
Rule 53    arguments -> argument COMA arguments
Rule 54    arguments -> argument
Rule 55    arguments -> <empty>
Rule 56    argument -> NAME
Rule 57    argument -> NAME EQUALS expression
Rule 58    expression -> name_reference LPAREN argument_values RPAREN
Rule 59    argument_values -> argument_value COMA argument_values
Rule 60    argument_values -> argument_value
Rule 61    argument_values -> <empty>
Rule 62    argument_value -> expression
Rule 63    class -> CLASS NAME extends implements COLON NEWLINE statements END
Rule 64    extends -> EXTENDS extends_values
Rule 65    extends -> <empty>
Rule 66    extends_values -> NAME COMA extends_values
Rule 67    extends_values -> NAME
Rule 68    implements -> IMPLEMENTS implements_values
Rule 69    implements -> <empty>
Rule 70    implements_values -> NAME COMA implements_values
Rule 71    implements_values -> NAME
Rule 72    interface -> INTERFACE NAME extends COLON NEWLINE statements END
Rule 73    plugin -> PLUGIN NAME extends implements allows COLON NEWLINE statements END
Rule 74    allows -> ALLOWS allows_values
Rule 75    allows -> <empty>
Rule 76    allows_values -> NAME COMA allows_values
Rule 77    allows_values -> NAME
Rule 78    capability -> CAPABILITY NAME extends COLON NEWLINE statements END

Terminals, with rules where they appear

ALLOWS               : 74
AND                  : 31
BOOL                 : 38
CAPABILITY           : 78
CLASS                : 63
COLON                : 6 7 8 10 11 48 63 72 73 78
COMA                 : 41 46 49 53 59 66 70 76
DIVIDE               : 24
DOT                  : 44
ELIF                 : 8
ELSE                 : 7
END                  : 6 10 11 48 63 72 73 78
EQUALEQUAL           : 26
EQUALS               : 5 57
EXTENDS              : 64
FOR                  : 11
FUNCTION             : 48
GLOBAL               : 13
GREATER              : 27
GREATEREQUAL         : 28
IF                   : 6
IMPLEMENTS           : 68
IMPORT               : 46 47
IN                   : 11
INTERFACE            : 72
LBRACK               : 40
LESS                 : 29
LESSEQUAL            : 30
LPAREN               : 35 48 58
MINUS                : 22 34
NAME                 : 11 13 44 45 48 56 57 63 66 67 70 71 72 73 76 77 78
NEWLINE              : 2 3 6 7 8 10 11 48 63 72 73 78
NOT                  : 33
NUMBER               : 36
OR                   : 32
PASS                 : 4
PLUGIN               : 73
PLUS                 : 21
POWER                : 25
RBRACK               : 40
RETURN               : 12
RPAREN               : 35 48 58
STATIC               : 52
STRING               : 37
TIMES                : 23
WHILE                : 10
error                : 

Nonterminals, with rules where they appear

allows               : 73
allows_values        : 74 76
argument             : 53 54
argument_value       : 59 60
argument_values      : 58 59
arguments            : 48 53
capability           : 20
class                : 17
else_condition       : 6 7 8
expression           : 5 6 8 10 11 12 14 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 34 35 41 42 57 62
extends              : 63 72 73 78
extends_values       : 64 66
function             : 16
function_operator    : 49 50
function_operators   : 48 49
implements           : 63 73
implements_values    : 68 70
import               : 15 46
interface            : 18
list_contents        : 40 41
name_reference       : 5 39 44 46 47 58
plugin               : 19
program              : 0
statement            : 2 3
statements           : 1 2 6 7 8 10 11 48 63 72 73 78


Parsing method: LALR


state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement NEWLINE statements
    (3) statements -> . statement NEWLINE
    (4) statement -> . PASS
    (5) statement -> . name_reference EQUALS expression
    (6) statement -> . IF expression COLON NEWLINE statements else_condition END
    (10) statement -> . WHILE expression COLON NEWLINE statements END
    (11) statement -> . FOR NAME IN expression COLON NEWLINE statements END
    (12) statement -> . RETURN expression
    (13) statement -> . GLOBAL NAME
    (14) statement -> . expression
    (15) statement -> . import
    (16) statement -> . function
    (17) statement -> . class
    (18) statement -> . interface
    (19) statement -> . plugin
    (20) statement -> . capability
    (44) name_reference -> . NAME DOT name_reference
    (45) name_reference -> . NAME
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression POWER expression
    (26) expression -> . expression EQUALEQUAL expression
    (27) expression -> . expression GREATER expression
    (28) expression -> . expression GREATEREQUAL expression
    (29) expression -> . expression LESS expression
    (30) expression -> . expression LESSEQUAL expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . NOT expression
    (34) expression -> . MINUS expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . STRING
    (38) expression -> . BOOL
    (39) expression -> . name_reference
    (40) expression -> . LBRACK list_contents RBRACK
    (58) expression -> . name_reference LPAREN argument_values RPAREN
    (46) import -> . IMPORT name_reference COMA import
    (47) import -> . IMPORT name_reference
    (48) function -> . function_operators FUNCTION NAME LPAREN arguments RPAREN COLON NEWLINE statements END
    (63) class -> . CLASS NAME extends implements COLON NEWLINE statements END
    (72) interface -> . INTERFACE NAME extends COLON NEWLINE statements END
    (73) plugin -> . PLUGIN NAME extends implements allows COLON NEWLINE statements END
    (78) capability -> . CAPABILITY NAME extends COLON NEWLINE statements END
    (49) function_operators -> . function_operator COMA function_operators
    (50) function_operators -> . function_operator
    (51) function_operators -> .
    (52) function_operator -> . STATIC

    PASS            shift and go to state 22
    IF              shift and go to state 25
    WHILE           shift and go to state 4
    FOR             shift and go to state 19
    RETURN          shift and go to state 1
    GLOBAL          shift and go to state 2
    NAME            shift and go to state 26
    NOT             shift and go to state 32
    MINUS           shift and go to state 8
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 3
    STRING          shift and go to state 9
    BOOL            shift and go to state 31
    LBRACK          shift and go to state 29
    IMPORT          shift and go to state 6
    CLASS           shift and go to state 16
    INTERFACE       shift and go to state 20
    PLUGIN          shift and go to state 28
    CAPABILITY      shift and go to state 12
    FUNCTION        reduce using rule 51 (function_operators -> .)
    STATIC          shift and go to state 5


    function                       shift and go to state 18
    statements                     shift and go to state 7
    plugin                         shift and go to state 27
    function_operators             shift and go to state 10
    class                          shift and go to state 24
    capability                     shift and go to state 30
    program                        shift and go to state 13
    statement                      shift and go to state 14
    interface                      shift and go to state 23
    import                         shift and go to state 15
    expression                     shift and go to state 33
    name_reference                 shift and go to state 11
    function_operator              shift and go to state 17

state 1

    (12) statement -> RETURN . expression
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression POWER expression
    (26) expression -> . expression EQUALEQUAL expression
    (27) expression -> . expression GREATER expression
    (28) expression -> . expression GREATEREQUAL expression
    (29) expression -> . expression LESS expression
    (30) expression -> . expression LESSEQUAL expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . NOT expression
    (34) expression -> . MINUS expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . STRING
    (38) expression -> . BOOL
    (39) expression -> . name_reference
    (40) expression -> . LBRACK list_contents RBRACK
    (58) expression -> . name_reference LPAREN argument_values RPAREN
    (44) name_reference -> . NAME DOT name_reference
    (45) name_reference -> . NAME

    NOT             shift and go to state 32
    MINUS           shift and go to state 8
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 3
    STRING          shift and go to state 9
    BOOL            shift and go to state 31
    LBRACK          shift and go to state 29
    NAME            shift and go to state 26


    expression                     shift and go to state 35
    name_reference                 shift and go to state 34

state 2

    (13) statement -> GLOBAL . NAME

    NAME            shift and go to state 36



state 3

    (36) expression -> NUMBER .

    PLUS            reduce using rule 36 (expression -> NUMBER .)
    MINUS           reduce using rule 36 (expression -> NUMBER .)
    TIMES           reduce using rule 36 (expression -> NUMBER .)
    DIVIDE          reduce using rule 36 (expression -> NUMBER .)
    POWER           reduce using rule 36 (expression -> NUMBER .)
    EQUALEQUAL      reduce using rule 36 (expression -> NUMBER .)
    GREATER         reduce using rule 36 (expression -> NUMBER .)
    GREATEREQUAL    reduce using rule 36 (expression -> NUMBER .)
    LESS            reduce using rule 36 (expression -> NUMBER .)
    LESSEQUAL       reduce using rule 36 (expression -> NUMBER .)
    AND             reduce using rule 36 (expression -> NUMBER .)
    OR              reduce using rule 36 (expression -> NUMBER .)
    NEWLINE         reduce using rule 36 (expression -> NUMBER .)
    COLON           reduce using rule 36 (expression -> NUMBER .)
    RPAREN          reduce using rule 36 (expression -> NUMBER .)
    COMA            reduce using rule 36 (expression -> NUMBER .)
    RBRACK          reduce using rule 36 (expression -> NUMBER .)



state 4

    (10) statement -> WHILE . expression COLON NEWLINE statements END
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression POWER expression
    (26) expression -> . expression EQUALEQUAL expression
    (27) expression -> . expression GREATER expression
    (28) expression -> . expression GREATEREQUAL expression
    (29) expression -> . expression LESS expression
    (30) expression -> . expression LESSEQUAL expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . NOT expression
    (34) expression -> . MINUS expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . STRING
    (38) expression -> . BOOL
    (39) expression -> . name_reference
    (40) expression -> . LBRACK list_contents RBRACK
    (58) expression -> . name_reference LPAREN argument_values RPAREN
    (44) name_reference -> . NAME DOT name_reference
    (45) name_reference -> . NAME

    NOT             shift and go to state 32
    MINUS           shift and go to state 8
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 3
    STRING          shift and go to state 9
    BOOL            shift and go to state 31
    LBRACK          shift and go to state 29
    NAME            shift and go to state 26


    expression                     shift and go to state 37
    name_reference                 shift and go to state 34

state 5

    (52) function_operator -> STATIC .

    COMA            reduce using rule 52 (function_operator -> STATIC .)
    FUNCTION        reduce using rule 52 (function_operator -> STATIC .)



state 6

    (46) import -> IMPORT . name_reference COMA import
    (47) import -> IMPORT . name_reference
    (44) name_reference -> . NAME DOT name_reference
    (45) name_reference -> . NAME

    NAME            shift and go to state 26


    name_reference                 shift and go to state 38

state 7

    (1) program -> statements .

    $end            reduce using rule 1 (program -> statements .)



state 8

    (34) expression -> MINUS . expression
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression POWER expression
    (26) expression -> . expression EQUALEQUAL expression
    (27) expression -> . expression GREATER expression
    (28) expression -> . expression GREATEREQUAL expression
    (29) expression -> . expression LESS expression
    (30) expression -> . expression LESSEQUAL expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . NOT expression
    (34) expression -> . MINUS expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . STRING
    (38) expression -> . BOOL
    (39) expression -> . name_reference
    (40) expression -> . LBRACK list_contents RBRACK
    (58) expression -> . name_reference LPAREN argument_values RPAREN
    (44) name_reference -> . NAME DOT name_reference
    (45) name_reference -> . NAME

    NOT             shift and go to state 32
    MINUS           shift and go to state 8
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 3
    STRING          shift and go to state 9
    BOOL            shift and go to state 31
    LBRACK          shift and go to state 29
    NAME            shift and go to state 26


    expression                     shift and go to state 39
    name_reference                 shift and go to state 34

state 9

    (37) expression -> STRING .

    PLUS            reduce using rule 37 (expression -> STRING .)
    MINUS           reduce using rule 37 (expression -> STRING .)
    TIMES           reduce using rule 37 (expression -> STRING .)
    DIVIDE          reduce using rule 37 (expression -> STRING .)
    POWER           reduce using rule 37 (expression -> STRING .)
    EQUALEQUAL      reduce using rule 37 (expression -> STRING .)
    GREATER         reduce using rule 37 (expression -> STRING .)
    GREATEREQUAL    reduce using rule 37 (expression -> STRING .)
    LESS            reduce using rule 37 (expression -> STRING .)
    LESSEQUAL       reduce using rule 37 (expression -> STRING .)
    AND             reduce using rule 37 (expression -> STRING .)
    OR              reduce using rule 37 (expression -> STRING .)
    NEWLINE         reduce using rule 37 (expression -> STRING .)
    COLON           reduce using rule 37 (expression -> STRING .)
    RPAREN          reduce using rule 37 (expression -> STRING .)
    COMA            reduce using rule 37 (expression -> STRING .)
    RBRACK          reduce using rule 37 (expression -> STRING .)



state 10

    (48) function -> function_operators . FUNCTION NAME LPAREN arguments RPAREN COLON NEWLINE statements END

    FUNCTION        shift and go to state 40



state 11

    (5) statement -> name_reference . EQUALS expression
    (39) expression -> name_reference .
    (58) expression -> name_reference . LPAREN argument_values RPAREN

    EQUALS          shift and go to state 41
    PLUS            reduce using rule 39 (expression -> name_reference .)
    MINUS           reduce using rule 39 (expression -> name_reference .)
    TIMES           reduce using rule 39 (expression -> name_reference .)
    DIVIDE          reduce using rule 39 (expression -> name_reference .)
    POWER           reduce using rule 39 (expression -> name_reference .)
    EQUALEQUAL      reduce using rule 39 (expression -> name_reference .)
    GREATER         reduce using rule 39 (expression -> name_reference .)
    GREATEREQUAL    reduce using rule 39 (expression -> name_reference .)
    LESS            reduce using rule 39 (expression -> name_reference .)
    LESSEQUAL       reduce using rule 39 (expression -> name_reference .)
    AND             reduce using rule 39 (expression -> name_reference .)
    OR              reduce using rule 39 (expression -> name_reference .)
    NEWLINE         reduce using rule 39 (expression -> name_reference .)
    LPAREN          shift and go to state 42



state 12

    (78) capability -> CAPABILITY . NAME extends COLON NEWLINE statements END

    NAME            shift and go to state 43



state 13

    (0) S' -> program .




state 14

    (2) statements -> statement . NEWLINE statements
    (3) statements -> statement . NEWLINE

    NEWLINE         shift and go to state 44



state 15

    (15) statement -> import .

    NEWLINE         reduce using rule 15 (statement -> import .)



state 16

    (63) class -> CLASS . NAME extends implements COLON NEWLINE statements END

    NAME            shift and go to state 45



state 17

    (49) function_operators -> function_operator . COMA function_operators
    (50) function_operators -> function_operator .

    COMA            shift and go to state 46
    FUNCTION        reduce using rule 50 (function_operators -> function_operator .)



state 18

    (16) statement -> function .

    NEWLINE         reduce using rule 16 (statement -> function .)



state 19

    (11) statement -> FOR . NAME IN expression COLON NEWLINE statements END

    NAME            shift and go to state 47



state 20

    (72) interface -> INTERFACE . NAME extends COLON NEWLINE statements END

    NAME            shift and go to state 48



state 21

    (35) expression -> LPAREN . expression RPAREN
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression POWER expression
    (26) expression -> . expression EQUALEQUAL expression
    (27) expression -> . expression GREATER expression
    (28) expression -> . expression GREATEREQUAL expression
    (29) expression -> . expression LESS expression
    (30) expression -> . expression LESSEQUAL expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . NOT expression
    (34) expression -> . MINUS expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . STRING
    (38) expression -> . BOOL
    (39) expression -> . name_reference
    (40) expression -> . LBRACK list_contents RBRACK
    (58) expression -> . name_reference LPAREN argument_values RPAREN
    (44) name_reference -> . NAME DOT name_reference
    (45) name_reference -> . NAME

    NOT             shift and go to state 32
    MINUS           shift and go to state 8
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 3
    STRING          shift and go to state 9
    BOOL            shift and go to state 31
    LBRACK          shift and go to state 29
    NAME            shift and go to state 26


    expression                     shift and go to state 49
    name_reference                 shift and go to state 34

state 22

    (4) statement -> PASS .

    NEWLINE         reduce using rule 4 (statement -> PASS .)



state 23

    (18) statement -> interface .

    NEWLINE         reduce using rule 18 (statement -> interface .)



state 24

    (17) statement -> class .

    NEWLINE         reduce using rule 17 (statement -> class .)



state 25

    (6) statement -> IF . expression COLON NEWLINE statements else_condition END
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression POWER expression
    (26) expression -> . expression EQUALEQUAL expression
    (27) expression -> . expression GREATER expression
    (28) expression -> . expression GREATEREQUAL expression
    (29) expression -> . expression LESS expression
    (30) expression -> . expression LESSEQUAL expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . NOT expression
    (34) expression -> . MINUS expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . STRING
    (38) expression -> . BOOL
    (39) expression -> . name_reference
    (40) expression -> . LBRACK list_contents RBRACK
    (58) expression -> . name_reference LPAREN argument_values RPAREN
    (44) name_reference -> . NAME DOT name_reference
    (45) name_reference -> . NAME

    NOT             shift and go to state 32
    MINUS           shift and go to state 8
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 3
    STRING          shift and go to state 9
    BOOL            shift and go to state 31
    LBRACK          shift and go to state 29
    NAME            shift and go to state 26


    expression                     shift and go to state 50
    name_reference                 shift and go to state 34

state 26

    (44) name_reference -> NAME . DOT name_reference
    (45) name_reference -> NAME .

    DOT             shift and go to state 51
    LPAREN          reduce using rule 45 (name_reference -> NAME .)
    COLON           reduce using rule 45 (name_reference -> NAME .)
    PLUS            reduce using rule 45 (name_reference -> NAME .)
    MINUS           reduce using rule 45 (name_reference -> NAME .)
    TIMES           reduce using rule 45 (name_reference -> NAME .)
    DIVIDE          reduce using rule 45 (name_reference -> NAME .)
    POWER           reduce using rule 45 (name_reference -> NAME .)
    EQUALEQUAL      reduce using rule 45 (name_reference -> NAME .)
    GREATER         reduce using rule 45 (name_reference -> NAME .)
    GREATEREQUAL    reduce using rule 45 (name_reference -> NAME .)
    LESS            reduce using rule 45 (name_reference -> NAME .)
    LESSEQUAL       reduce using rule 45 (name_reference -> NAME .)
    AND             reduce using rule 45 (name_reference -> NAME .)
    OR              reduce using rule 45 (name_reference -> NAME .)
    NEWLINE         reduce using rule 45 (name_reference -> NAME .)
    RPAREN          reduce using rule 45 (name_reference -> NAME .)
    COMA            reduce using rule 45 (name_reference -> NAME .)
    RBRACK          reduce using rule 45 (name_reference -> NAME .)
    EQUALS          reduce using rule 45 (name_reference -> NAME .)



state 27

    (19) statement -> plugin .

    NEWLINE         reduce using rule 19 (statement -> plugin .)



state 28

    (73) plugin -> PLUGIN . NAME extends implements allows COLON NEWLINE statements END

    NAME            shift and go to state 52



state 29

    (40) expression -> LBRACK . list_contents RBRACK
    (41) list_contents -> . expression COMA list_contents
    (42) list_contents -> . expression
    (43) list_contents -> .
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression POWER expression
    (26) expression -> . expression EQUALEQUAL expression
    (27) expression -> . expression GREATER expression
    (28) expression -> . expression GREATEREQUAL expression
    (29) expression -> . expression LESS expression
    (30) expression -> . expression LESSEQUAL expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . NOT expression
    (34) expression -> . MINUS expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . STRING
    (38) expression -> . BOOL
    (39) expression -> . name_reference
    (40) expression -> . LBRACK list_contents RBRACK
    (58) expression -> . name_reference LPAREN argument_values RPAREN
    (44) name_reference -> . NAME DOT name_reference
    (45) name_reference -> . NAME

    RBRACK          reduce using rule 43 (list_contents -> .)
    NOT             shift and go to state 32
    MINUS           shift and go to state 8
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 3
    STRING          shift and go to state 9
    BOOL            shift and go to state 31
    LBRACK          shift and go to state 29
    NAME            shift and go to state 26


    expression                     shift and go to state 53
    list_contents                  shift and go to state 54
    name_reference                 shift and go to state 34

state 30

    (20) statement -> capability .

    NEWLINE         reduce using rule 20 (statement -> capability .)



state 31

    (38) expression -> BOOL .

    PLUS            reduce using rule 38 (expression -> BOOL .)
    MINUS           reduce using rule 38 (expression -> BOOL .)
    TIMES           reduce using rule 38 (expression -> BOOL .)
    DIVIDE          reduce using rule 38 (expression -> BOOL .)
    POWER           reduce using rule 38 (expression -> BOOL .)
    EQUALEQUAL      reduce using rule 38 (expression -> BOOL .)
    GREATER         reduce using rule 38 (expression -> BOOL .)
    GREATEREQUAL    reduce using rule 38 (expression -> BOOL .)
    LESS            reduce using rule 38 (expression -> BOOL .)
    LESSEQUAL       reduce using rule 38 (expression -> BOOL .)
    AND             reduce using rule 38 (expression -> BOOL .)
    OR              reduce using rule 38 (expression -> BOOL .)
    NEWLINE         reduce using rule 38 (expression -> BOOL .)
    COLON           reduce using rule 38 (expression -> BOOL .)
    RPAREN          reduce using rule 38 (expression -> BOOL .)
    COMA            reduce using rule 38 (expression -> BOOL .)
    RBRACK          reduce using rule 38 (expression -> BOOL .)



state 32

    (33) expression -> NOT . expression
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression POWER expression
    (26) expression -> . expression EQUALEQUAL expression
    (27) expression -> . expression GREATER expression
    (28) expression -> . expression GREATEREQUAL expression
    (29) expression -> . expression LESS expression
    (30) expression -> . expression LESSEQUAL expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (33) expression -> . NOT expression
    (34) expression -> . MINUS expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . STRING
    (38) expression -> . BOOL
    (39) expression -> . name_reference
    (40) expression -> . LBRACK list_contents RBRACK
    (58) expression -> . name_reference LPAREN argument_values RPAREN
    (44) name_reference -> . NAME DOT name_reference
    (45) name_reference -> . NAME

    NOT             shift and go to state 32
    MINUS           shift and go to state 8
    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 3
    STRING          shift and go to state 9
    BOOL            shift and go to state 31
    LBRACK          shift and go to state 29
    NAME            shift and go to state 26


    expression                     shift and go to state 55
    name_reference                 shift and go to state 34

state 33

    (14) statement -> expression .
    (21) expression -> expression . PLUS expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . TIMES expression
    (24) expression -> expression . DIVIDE expression
    (25) expression -> expression . POWER expression
    (26) expression -> expression . EQUALEQUAL expression
    (27) expression -> expression . GREATER expression
    (28) expression -> expression . GREATEREQUAL expression
    (29) expression -> expression . LESS expression
    (30) expression -> expression . LESSEQUAL expression
    (31) expression -> expression . AND expression
    (32) expression -> expression . OR expression

    NEWLINE         reduce using rule 14 (statement -> expression .)
    PLUS            shift and go to state 63
    MINUS           shift and go to state 66
    TIMES           shift and go to state 62
    DIVIDE          shift and go to state 59
    POWER           shift and go to state 60
    EQUALEQUAL      shift and go to state 65
    GREATER         shift and go to state 67
    GREATEREQUAL    shift and go to state 58
    LESS            shift and go to state 61
    LESSEQUAL       shift and go to state 64
    AND             shift and go to state 56
    OR              shift and go to state 57



state 34

    (39) expression -> name_reference .
    (58) expression -> name_reference . LPAREN argument_values RPAREN

    PLUS            reduce using rule 39 (expression -> name_reference .)
    MINUS           reduce using rule 39 (expression -> name_reference .)
    TIMES           reduce using rule 39 (expression -> name_reference .)
    DIVIDE          reduce using rule 39 (expression -> name_reference .)
    POWER           reduce using rule 39 (expression -> name_reference .)
    EQUALEQUAL      reduce using rule 39 (expression -> name_reference .)
    GREATER         reduce using rule 39 (expression -> name_reference .)
    GREATEREQUAL    reduce using rule 39 (expression -> name_reference .)
    LESS            reduce using rule 39 (expression -> name_reference .)
    LESSEQUAL       reduce using rule 39 (expression -> name_reference .)
    AND             reduce using rule 39 (expression -> name_reference .)
    OR              reduce using rule 39 (expression -> name_reference .)
    NEWLINE         reduce using rule 39 (expression -> name_reference .)
    COLON           reduce using rule 39 (expression -> name_reference .)
    RPAREN          reduce using rule 39 (expression -> name_reference .)
    COMA            reduce using rule 39 (expression -> name_reference .)
    RBRACK          reduce using rule 39 (expression -> name_reference .)
    LPAREN          shift and go to state 42



state 35

    (12) statement -> RETURN expression .
    (21) expression -> expression . PLUS expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . TIMES expression
    (24) expression -> expression . DIVIDE expression
    (25) expression -> expression . POWER expression
    (26) expression -> expression . EQUALEQUAL expression
    (27) expression -> expression . GREATER expression
    (28) expression -> expression . GREATEREQUAL expression
    (29) expression -> expression . LESS expression
    (30) expression -> expression . LESSEQUAL expression
    (31) expression -> expression . AND expression
    (32) expression -> expression . OR expression

    NEWLINE         reduce using rule 12 (statement -> RETURN expression .)
    PLUS            shift and go to state 63
    MINUS           shift and go to state 66
    TIMES           shift and go to state 62
    DIVIDE          shift and go to state 59
    POWER           shift and go to state 60
    EQUALEQUAL      shift and go to state 65
    GREATER         shift and go to state 67
    GREATEREQUAL    shift and go to state 58
    LESS            shift and go to state 61
    LESSEQUAL       shift and go to state 64
    AND             shift and go to state 56
    OR              shift and go to state 57



state 36

    (13) statement -> GLOBAL NAME .

    NEWLINE         reduce using rule 13 (statement -> GLOBAL NAME .)



state 37

    (10) statement -> WHILE expression . COLON NEWLINE statements END
    (21) expression -> expression . PLUS expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . TIMES expression
    (24) expression -> expression . DIVIDE expression
    (25) expression -> expression . POWER expression
    (26) expression -> expression . EQUALEQUAL expression
    (27) expression -> expression . GREATER expression
    (28) expression -> expression . GREATEREQUAL expression
    (29) expression -> expression . LESS expression
    (30) expression -> expression . LESSEQUAL expression
    (31) expression -> expression . AND expression
    (32) expression -> expression . OR expression

    COLON           shift and go to state 68
    PLUS            shift and go to state 63
    MINUS           shift and go to state 66
    TIMES           shift and go to state 62
    DIVIDE          shift and go to state 59
    POWER           shift and go to state 60
    EQUALEQUAL      shift and go to state 65
    GREATER         shift and go to state 67
    GREATEREQUAL    shift and go to state 58
    LESS            shift and go to state 61
    LESSEQUAL       shift and go to state 64
    AND             shift and go to state 56
    OR              shift and go to state 57



state 38

    (46) import -> IMPORT name_reference . COMA import
    (47) import -> IMPORT name_reference .

    COMA            shift and go to state 69
    NEWLINE         reduce using rule 47 (import -> IMPORT name_reference .)



state 39

    (34) expression -> MINUS expression .
    (21) expression -> expression . PLUS expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . TIMES expression
    (24) expression -> expression . DIVIDE expression
    (25) expression -> expression . POWER expression
    (26) expression -> expression . EQUALEQUAL expression
    (27) expression -> expression . GREATER expression
    (28) expression -> expression . GREATEREQUAL expression
    (29) expression -> expression . LESS expression
    (30) expression -> expression . LESSEQUAL expression
    (31) expression -> expression . AND expression
    (32) expression -> expression . OR expression

    PLUS            reduce using rule 34 (expression -> MINUS expression .)
    MINUS           reduce using rule 34 (expression -> MINUS expression .)
    TIMES           reduce using rule 34 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 34 (expression -> MINUS expression .)
    POWER           reduce using rule 34 (expression -> MINUS expression .)
    EQUALEQUAL      reduce using rule 34 (expression -> MINUS expression .)
    GREATER         reduce using rule 34 (expression -> MINUS expression .)
    GREATEREQUAL    reduce using rule 34 (expression -> MINUS expression .)
    LESS            reduce using rule 34 (expression -> MINUS expression .)
    LESSEQUAL       reduce using rule 34 (expression -> MINUS expression .)
    AND             reduce using rule 34 (expression -> MINUS expression .)
    OR              reduce using rule 34 (expression -> MINUS expression .)
    NEWLINE         reduce using rule 34 (expression -> MINUS expression .)
